NPTF-459 Fix invisible login, translate menu items

--- a/src/components/NCMenu/NCCornerMenu/NCCornerMenu.scss
+++ b/src/components/NCMenu/NCCornerMenu/NCCornerMenu.scss
@@ -39,9 +39,11 @@
         }
     }
 
-    .login-button {
-        @media screen and (max-width: 387px) {
-            display: none;
+    .top-menu {
+        .login-button {
+            @media screen and (max-width: 387px) {
+                display: none;
+            }
         }
     }
 }
